--- a/src/assets/styles/sections.css
+++ b/src/assets/styles/sections.css
@@ -24,7 +24,6 @@
 #root .hero-section {
   color: var(--coNavLink); /* #FBFAFB */
   display: flex;
-  align-items: center;
   background: url('/images/bg2-mobile2.jpg') center/cover no-repeat;
   padding: 4rem 0;
   overflow: visible;
@@ -46,11 +45,12 @@
 
 #root .hero-section .container {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: -1rem auto;
   padding: 0 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+
 }
 
 #root .hero-section .hero-title-cont {
@@ -78,6 +78,7 @@
   flex: 1;
   max-width: 800px;
   width: 100%;
+  margin-top: -2rem;
 }
 
 #root .hero-section .hero-title {
@@ -104,8 +105,10 @@
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
+  align-items: center;
   justify-content: center;
   margin-bottom: 0.5rem;
+  gap: 0.5rem;
 }
 
 /* Media Queries */
@@ -115,11 +118,14 @@
   }
 
   #root .hero-section .hero-title {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
+    margin-top: 1.5rem;
   }
 
   #root .hero-section .hero-buttons {
     flex-direction: row;
+    flex-wrap: nowrap;
+    text-wrap: nowrap;
   }
 }
 
@@ -137,13 +143,17 @@
   }
 
   #root .hero-section .hero-title {
-    font-size: 4rem;
+    font-size: 3rem;
+    margin-top: 3rem;
   }
 
   #root .hero-section .hero-text {
     font-size: 1.25rem;
     margin-left: 0;
     margin-right: 0;
+  }
+  #root .hero-section .hero-video-col {
+  margin-top: -0;
   }
 }
 
@@ -153,7 +163,6 @@
 #root .offer-section {
   color: var(--coNavLink);
   display: flex;
-  align-items: center;
   background: url('/images/bg1-mobile.jpg') center/cover no-repeat;
   padding: 4rem 0;
   overflow: visible;
@@ -175,7 +184,7 @@
 
 #root .offer-section .container {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: -3rem auto;
   padding: 0 1rem;
   display: flex;
   flex-direction: column;
@@ -381,7 +390,7 @@
 
 #root .faq-section .container {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: -3rem auto;
   padding: 0 1rem;
 }
 
@@ -488,7 +497,6 @@
 #root .contact-section {
   color: var(--coNavLink); /* #FBFAFB */
   display: flex;
-  align-items: center;
   background: url('/images/bg1-mobile.jpg') center/cover no-repeat;
   padding: 4rem 0;
   overflow: visible;
@@ -511,7 +519,7 @@
 
 #root .contact-section .container {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: -3rem auto;
   padding: 0 1rem;
 }
 
@@ -656,7 +664,6 @@
 #root .how-section {
   color: var(--coNavLink);
   display: flex;
-  align-items: center;
   background: url('/images/bg3-mobile.jpg') center/cover no-repeat;
   padding: 4rem 0;
   overflow: visible;
@@ -678,7 +685,7 @@
 
 #root .how-section .container {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: -3rem auto;
   padding: 0 1rem;
 }
 
@@ -835,7 +842,6 @@
 #root .team-section {
   color: var(--coNavLink);
   display: flex;
-  align-items: center;
   background: url('/images/bg2-mobile2.jpg') center/cover no-repeat;
   padding: 4rem 0;
   overflow: visible;
@@ -857,7 +863,7 @@
 
 #root .team-section .container {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: -3rem auto;
   padding: 0 1rem;
 }
 
@@ -956,7 +962,6 @@
 #root .why-section {
   color: var(--coNavLink);
   display: flex;
-  align-items: center;
   background: url('/images/bg1-mobile.jpg') center/cover no-repeat;
   padding: 4rem 0;
   overflow: visible;
@@ -978,7 +983,7 @@
 
 #root .why-section .container {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: -3rem auto;
   padding: 0 1rem;
 }
 
