Edit Why Section layout to be mobile friendly

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -161,6 +161,13 @@ body {
   color: var(--bgHn);
 }
 
+#root .flexBox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 2rem;
+}
+
 /* ==========================================================================
    List Styles
    ========================================================================== */
