Finish front-end layout; Fixed footer styling

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -72,6 +72,7 @@
   --coCust8: rgb(19, 30, 48);
   --coCust10: rgb(252, 215, 215);
   --coCust11: rgba(219, 219, 235);
+  --coCust12: #FCBE03;
 
   /* Custom fonts */
   --fCust1: 'comfortaa';
